--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ a {
 
 /*vilmas sida*/
 .vpre{
-    margin-bottom: 25em;
+    margin-bottom: 20em;
     margin-top: 2em;
 }
 
@@ -228,6 +228,11 @@ a {
     float: right;
     padding: 0.1em;
     margin-right: 1em;
+}
+
+#textA{
+    font-size: 3em;
+    margin-left: 0.7em;
 }
 
 #vnamn{
@@ -411,6 +416,7 @@ textarea{
     width: 23%;
     height: auto;
     margin-right: 2em;
+    margin-left: 2em;
 }
 
 
@@ -492,17 +498,15 @@ textarea{
     font-size: 5em;
 }
 
-
-
 #jontebild{
     float: left;
     width: 15em;
     height: 23em;
-    margin: 2em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 #jtext{
-
     font-size: 1em;
     margin-bottom: 11em;
 
